--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 USERNAME=ganeshsadhashivam
 PASSWORD=EYkMQ5o7xAX8a8y5
-MONGODB_URI=mongodb+srv://ganeshsadhashivam:<password>@cluster0.hlbffc6.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://ganeshsadhashivam:EYkMQ5o7xAX8a8y5@cluster0.hlbffc6.mongodb.net/ecommerceadminusingnextjs?retryWrites=true&w=majority
 TOKEN_SECRET=
 DOMAIN=http://localhost:3000
